<?xml version="1.0"?>
<package format="3">
  <name>cfw500_modbus</name>
  <version>0.0.1</version>
  <description>Pacote ROS 2 para comunicação Modbus com inversor WEG CFW500</description>
  <maintainer email="seuemail@example.com">Seu Nome</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>pymodbus</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

